starting move method
